fixing perfomance shifts

--- a/chamber/styles/chamber.css
+++ b/chamber/styles/chamber.css
@@ -638,4 +638,14 @@ textarea{
     background-image: linear-gradient(#025F5F, white)
 }
 
+#discover>div {
+    min-height: 400px;
+    overflow: hidden;
+}
 
+#discover div img {
+    width: 100%;
+    aspect-ratio: 16 / 9;
+    object-fit: cover;
+    display: block;
+}
